[package]
name = "aes-ctr"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "AES-CTR stream ciphers"
documentation = "https://docs.rs/aes-ctr"
repository = "https://github.com/RustCrypto/ciphers"
keywords = ["crypto", "cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git="https://github.com/fortelabsinc/traits", rev="bc79ccb48b97aa1c7ea1b442763be126900094ae" }

[target.'cfg(not(all(target_feature = "aes", target_feature = "sse2", target_feature = "ssse3", any(target_arch = "x86_64", target_arch = "x86"))))'.dependencies]
#ctr = "0.3"
ctr = {path = "../ctr"}
aes-soft = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }

[target.'cfg(all(target_feature = "aes", target_feature = "sse2", target_feature = "ssse3", any(target_arch = "x86_64", target_arch = "x86")))'.dependencies]
aesni = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }

[dev-dependencies]
stream-cipher = { git="https://github.com/fortelabsinc/traits", rev="bc79ccb48b97aa1c7ea1b442763be126900094ae" }

[badges]
travis-ci = { repository = "RustCrypto/ciphers" }
