[package]
name = "block-modes"
version = "0.2.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "Block cipher modes of operation"
documentation = "https://docs.rs/block-modes"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
block-padding = "0.1"
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }

[dev-dependencies]
aes-soft = {path = "../aes/aes-soft"}
