[package]
name = "block-modes"
version = "0.3.3"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Block cipher modes of operation"
documentation = "https://docs.rs/block-modes"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "block-cipher", "ciphers"]

[dependencies]
block-padding = "0.1"
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }

[dev-dependencies]
aes-soft = {path = "../aes/aes-soft"}

hex-literal = "0.1"

[features]
default = ["std"]
std = []
