[package]
name = "cfb-mode"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Generic Cipher Feedback (CFB) mode implementation."
documentation = "https://docs.rs/cfb-mode"
repository = "https://github.com/RustCrypto/ciphers"
keywords = ["crypto", "cipher", "block-mode"]
categories = ["cryptography", "no-std"]

[dependencies]
cipher = { git="https://github.com/fortelabsinc/traits", rev="76eeac2e494a90cf847be767117f8ca155f50709" }
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }

[dev-dependencies]
aes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="fba23c3d89cace099c42e76ebf8af8a7569eb7f4" }
cipher = { git="https://github.com/fortelabsinc/traits", rev="76eeac2e494a90cf847be767117f8ca155f50709" }
hex-literal = "0.1"

[badges]
travis-ci = { repository = "RustCrypto/ciphers" }

[package.metadata.docs.rs]
features = [ "std" ]
