[package]
name = "cfb8"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Generic 8-bit Cipher Feedback (CFB8) mode implementation."
documentation = "https://docs.rs/cfb8"
repository = "https://github.com/RustCrypto/ciphers"
keywords = ["crypto", "cipher", "block-mode"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git="https://github.com/fortelabsinc/traits", rev="bc79ccb48b97aa1c7ea1b442763be126900094ae" }
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }

[dev-dependencies]
aes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }
stream-cipher = { git="https://github.com/fortelabsinc/traits", rev="bc79ccb48b97aa1c7ea1b442763be126900094ae" }
hex-literal = "0.1"

[badges]
travis-ci = { repository = "RustCrypto/ciphers" }

[package.metadata.docs.rs]
features = [ "std" ]
