[package]
name = "ctr"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "CTR block mode of operation"
documentation = "https://docs.rs/ctr"
repository = "https://github.com/RustCrypto/ciphers"
keywords = ["crypto", "cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
stream-cipher = { git="https://github.com/fortelabsinc/traits", rev="bc79ccb48b97aa1c7ea1b442763be126900094ae" }
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }

[dev-dependencies]
aes = { git = "https://github.com/fortelabsinc/block-ciphers", rev="6c5232fce16396363cdecf71dd5595be4c2ed426" }
stream-cipher = { git="https://github.com/fortelabsinc/traits", rev="bc79ccb48b97aa1c7ea1b442763be126900094ae" }

[badges]
travis-ci = { repository = "RustCrypto/ciphers" }
