[package]
name = "twofish"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "MIT/Apache-2.0"
description = "Twofish block cipher"
documentation = "https://docs.rs/twofish"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "twofish", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
byte-tools = "0.2"
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }
opaque-debug = "0.1"

[badges]
travis-ci = { repository = "RustCrypto/block-ciphers" }
