[package]
name = "aes-soft"
version = "0.3.3"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "AES (Rijndael) block ciphers bit-sliced implementation"
documentation = "https://docs.rs/aes-soft"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }
opaque-debug = "0.2"
byteorder = { version = "1", default-features = false }

[dev-dependencies]
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }
