[package]
name = "aesni"
version = "0.6.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "AES (Rijndael) block ciphers implementation using AES-NI"
documentation = "https://docs.rs/aesni"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }
opaque-debug = "0.2"
#stream-cipher = { version = "0.3", optional = true }
cipher = { git="https://github.com/fortelabsinc/traits", rev="76eeac2e494a90cf847be767117f8ca155f50709" }

[dev-dependencies]
block-cipher-trait = { git = "https://github.com/fortelabsinc/traits", rev="727a18f143cda9e0da7fc925722d77ae254d201a" }
#stream-cipher = { version = "0.3", features = ["dev"] }
cipher = { git="https://github.com/fortelabsinc/traits", rev="76eeac2e494a90cf847be767117f8ca155f50709" }

[features]
default = ["ctr"]
ctr = ["stream-cipher"]
nocheck = []

[workspace]

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+aes,+ssse3"]
rustdoc-args = ["-C", "target-feature=+aes,+ssse3"]
